--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
         </dependency>
         <dependency>
             <groupId>com.bladejava</groupId>
-            <artifactId>blade-jdbc-core</artifactId>
-            <version>0.0.3-RELEASE</version>
+            <artifactId>blade-jdbc</artifactId>
+            <version>0.2.2-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.bladejava</groupId>
@@ -37,13 +37,15 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.43</version>
+            <version>5.1.41</version>
         </dependency>
+
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>2.7.1</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.31</version>
         </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
